<resources xmlns:tools="http://schemas.android.com/tools">
    <plurals name="reply_with_number">
        <item quantity="one">%d reply</item>
        <item quantity="other">%d replies</item>
    </plurals>
    <plurals name="reply">
        <item quantity="one">reply</item>
        <item quantity="other">replies</item>
    </plurals>
    <plurals name="image">
        <item quantity="one">%d image</item>
        <item quantity="other">%d images</item>
    </plurals>
    <plurals name="board">
        <item quantity="one">%d board</item>
        <item quantity="other">%d boards</item>
    </plurals>
    <plurals name="type">
        <item quantity="one">%d type</item>
        <item quantity="other">%d types</item>
    </plurals>
    <plurals name="filter">
        <item quantity="one">%d filter</item>
        <item quantity="other">%d filters</item>
    </plurals>
    <plurals name="site">
        <item quantity="one">%d site</item>
        <item quantity="other">%d sites</item>
    </plurals>
    <plurals name="post_hidden">
        <item quantity="one">%1$d post hidden</item>
        <item quantity="other">%1$d posts hidden</item>
    </plurals>
    <plurals name="post_removed">
        <item quantity="one">%1$d post removed</item>
        <item quantity="other">%1$d posts removed</item>
    </plurals>
    <string name="cancel">Cancel</string>
    <string name="cancel_all">Cancel all</string>
    <string name="canceled">Canceled</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="create">Create</string>
    <string name="do_not">Do not</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="send">Send</string>
    <string name="help">Help</string>
    <string name="retry">Retry</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="resolve">Resolve</string>
    <string name="success">Success</string>
    <string name="unhandled_error">Unhandled error!</string>
    <string name="loading">Loading…</string>
    <string name="download">Download</string>
    <string name="sfw">SFW</string>
    <string name="nsfw">NSFW</string>
    <string name="mark_as_my_post">Mark as my post</string>
    <string name="unmark_as_my_post">Unmark as my post</string>
    <string name="bottom_menu_item_reorder">Reorder</string>
    <string name="bottom_menu_item_move">Move</string>
    <string name="bottom_menu_item_download">Download</string>
    <string name="bottom_menu_item_read">Read</string>
    <string name="bottom_menu_item_delete">Delete</string>
    <string name="bottom_menu_item_stop">Stop</string>
    <string name="bottom_menu_item_start">Start</string>
    <string name="bottom_menu_item_export">Export</string>
    <string name="permission_app_settings">App settings</string>
    <string name="permission_grant">Grant</string>
    <string name="menu_search">Search</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_posts">Posts</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_settings">Settings</string>
    <string name="restart_the_app">Restart the app</string>
    <string name="restart_the_media_viewer">Restart media viewer</string>
    <string name="update_later">Later</string>
    <string name="update_none">Already on the latest %1$s version.</string>
    <string name="update_install">Install</string>
    <string name="update_install_download_failed">Download failed</string>
    <string name="update_check_failed">Failed to check for updates.</string>
    <string name="update_install_download_failed_description">Reason: %1$s.\n\nIf this error keeps appearing then you will have to update manually.</string>
    <string name="update_install_download_failed_canceled">Reason: canceled</string>
    <string name="update_retry">%1$s was not updated yet. Tap \"retry\" to retry the install.</string>
    <string name="update_failed_to_install">Failed to install update. Try to install it manually.</string>
    <string name="update_failed_to_install_description">Failed to install update. Reason: \'%1$s\'</string>
    <string name="update_application_update_available">Application update is available!</string>
    <string name="update_application_update_available_description">New app version is available:</string>
    <string name="update_storage_permission_required_title">Storage permission required</string>
    <string name="update_storage_permission_required">
"Permission to access storage is required for installing the update.

Re-enable this permission in the app settings if you permanently disabled it."</string>
    <string name="seconds">%d seconds</string>
    <string name="minutes">%d minutes</string>
    <string name="hours">%d hours</string>
    <string name="post_reply_hidden">hidden</string>
    <string name="post_reply_removed">removed</string>
    <string name="card_stats_replies_compact">%1$dR</string>
    <string name="card_stats_images_compact">%1$dI</string>
    <string name="card_stats_page_compact">Pg %1$d</string>
    <string name="post_multiple_images_compact_mode_file_info">%1$d files, %2$s</string>
    <plurals name="thread_new_posts">
        <item quantity="one">%d new post</item>
        <item quantity="other">%d new posts</item>
    </plurals>
    <plurals name="thread_deleted_posts">
        <item quantity="one">%d deleted post</item>
        <item quantity="other">%d deleted posts</item>
    </plurals>
    <string name="action_reload">Reload</string>
    <string name="action_pin">Bookmark</string>
    <string name="action_view_removed_posts">View manually hidden/removed posts</string>
    <string name="action_preview_thread_in_archive">Preview in archive</string>
    <string name="action_open_in_archive">Open in archive</string>
    <string name="action_open_browser">Open in a browser</string>
    <string name="action_catalog_album">Catalog album</string>
    <string name="action_rest_composite_catalog">Load the rest of this composite catalog</string>
    <string name="action_open_catalog_or_thread_by_identifier">Open catalog/thread by any identifier</string>
    <string name="action_open_media_by_url">Open media (image/video) by url</string>
    <string name="action_share">Share</string>
    <string name="action_board_archive">View board archive</string>
    <string name="action_view_removed_threads">View manually hidden/removed threads</string>
    <string name="action_open_catalog_page">Open catalog page</string>
    <string name="action_go_to_post">Go to post</string>
    <string name="action_thread_options">More options</string>
    <string name="action_allow_image_transparency">Allow image transparency</string>
    <string name="action_draw_behind_notch">Draw media content behind phone notch/system UI</string>
    <string name="action_search">Search</string>
    <string name="action_switch_catalog_grid">Catalog (grid) mode</string>
    <string name="action_switch_catalog_stagger">Catalog (stagger) mode</string>
    <string name="action_switch_board">Board mode</string>
    <string name="action_start_thread_download">Start thread download</string>
    <string name="action_stop_thread_download">Stop thread download</string>
    <string name="action_copy_link_text">Copy link text</string>
    <string name="action_copy_link_value">Copy link value</string>
    <string name="action_copy_link_show_post_options">Show post options</string>
    <string name="action_import_light_theme">Import Light theme</string>
    <string name="action_import_light_theme_from_clipboard">Import Light theme from clipboard</string>
    <string name="action_import_dark_theme">Import Dark theme</string>
    <string name="action_import_dark_theme_from_clipboard">Import Dark theme from clipboard</string>
    <string name="action_export_light_theme_to_file">Export Light theme to file</string>
    <string name="action_export_light_theme_to_clipboard">Export Light theme to clipboard</string>
    <string name="action_export_dark_theme_to_file">Export Dark theme to file</string>
    <string name="action_export_dark_theme_to_clipboard">Export Dark theme to clipboard</string>
    <string name="action_reset_light_theme">Reset Light theme</string>
    <string name="action_reset_dark_theme">Reset Dark theme</string>
    <string name="action_ignore_dark_night_mode">Ignore system Day/Night mode</string>
    <string name="action_mark_your_posts_on_scrollbar">Highlight my posts</string>
    <string name="action_mark_replies_to_your_posts_on_scrollbar">Highlight (You)s</string>
    <string name="action_mark_cross_thread_quotes_on_scrollbar">Highlight cross-thread replies</string>
    <string name="action_mark_deleted_posts_on_scrollbar">Highlight deleted posts</string>
    <string name="action_mark_hot_posts_on_scrollbar">Highlight \"Hot\" posts</string>
    <string name="action_catalog_thread_nsfw_mode">NSFW mode</string>
    <string name="controller_media_viewer_title">Media viewer gestures settings</string>
    <string name="controller_image_viewer_top_gesture_action">Top gesture action</string>
    <string name="controller_image_viewer_bottom_gesture_action">Bottom gesture action</string>
    <string name="controller_image_viewer_close_media_viewer">Close media viewer</string>
    <string name="controller_image_viewer_save_media">Save media</string>
    <string name="controller_image_viewer_disabled">Disabled</string>
    <string name="controller_proxy_editor_proxy_address">Proxy address</string>
    <string name="controller_proxy_editor_proxy_port">Proxy port</string>
    <string name="controller_proxy_editor_proxy_type">Proxy type</string>
    <string name="controller_proxy_editor_proxy_type_http">HTTP</string>
    <string name="controller_proxy_editor_proxy_type_socks">SOCKS</string>
    <string name="controller_proxy_editor_enable_on_sites">Enable on sites</string>
    <string name="controller_proxy_editor_actions">Actions</string>
    <string name="controller_proxy_editor_enable_for_site_requests">Enable for site requests (Posting/Captcha/Json fetching etc)</string>
    <string name="controller_proxy_editor_enable_for_media_previews">Enable for media preview loading (Post thumbnails/bookmarks/tabs/etc thumbnails/site icons etc)</string>
    <string name="controller_proxy_editor_enable_for_full_media">Enable for full media loading</string>
    <string name="lorem_ipsum">
        The standard Lorem Ipsum passage, used since the 1500s
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
    </string>
    <string name="hsid_cookie_text">HSID</string>
    <string name="ssid_cookie_text">SSID</string>
    <string name="sid_cookie_text">SID</string>
    <string name="nid_cookie_text">NID</string>
    <string name="js_captcha_cookies_editor_save_and_apply_text">Save and apply</string>
    <string name="js_captcha_cookies_editor_make_sure_to_double_check_all_the_parameters_message">Make sure to double check all parameters! (And symbols like periods)</string>
    <string name="js_captcha_cookies_editor_format_hint_message">Enter the values. No need to prepend them with \"HSID=…\", \"SSID=…\" etc.</string>
</resources>