<?xml version="1.0" encoding="utf-8"?>
<com.github.k1rakishou.chan.ui.theme.widget.ColorizableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout
            android:id="@+id/proxy_address_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.k1rakishou.chan.ui.theme.widget.ColorizableEditText
                android:id="@+id/proxy_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/controller_proxy_editor_proxy_address"
                android:inputType="textNoSuggestions" />

        </com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout>

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout
            android:id="@+id/proxy_port_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.k1rakishou.chan.ui.theme.widget.ColorizableEditText
                android:id="@+id/proxy_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:digits="0123456789"
                android:hint="@string/controller_proxy_editor_proxy_port"
                android:inputType="number" />

        </com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout>

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/controller_proxy_editor_proxy_type"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/proxy_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/proxy_type_http">

            <com.github.k1rakishou.chan.ui.theme.widget.ColorizableRadioButton
                android:id="@+id/proxy_type_http"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/controller_proxy_editor_proxy_type_http" />

            <com.github.k1rakishou.chan.ui.theme.widget.ColorizableRadioButton
                android:id="@+id/proxy_type_socks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/controller_proxy_editor_proxy_type_socks" />

        </RadioGroup>

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/controller_proxy_editor_enable_on_sites"
            android:textSize="18sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/proxy_sites_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/controller_proxy_editor_actions"
            android:textSize="18sp" />

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableCheckBox
            android:id="@+id/enable_for_site_requests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/controller_proxy_editor_enable_for_site_requests" />

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableCheckBox
            android:id="@+id/enable_for_media_previews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/controller_proxy_editor_enable_for_media_previews" />

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableCheckBox
            android:id="@+id/enable_for_full_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/controller_proxy_editor_enable_for_full_media" />

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableButton
            android:id="@+id/proxy_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="48dp"
            android:text="@string/save" />

    </LinearLayout>

</com.github.k1rakishou.chan.ui.theme.widget.ColorizableScrollView>