<?xml version="1.0" encoding="utf-8"?>
<com.github.k1rakishou.chan.ui.theme.widget.ColorizableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/js_captcha_cookies_editor_warning"
            android:text="@string/js_captcha_cookies_editor_make_sure_to_double_check_all_the_parameters_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/js_captcha_cookies_editor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/js_captcha_cookies_editor_format_hint_message"
            android:layout_marginTop="16dp"/>

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.github.k1rakishou.chan.ui.theme.widget.ColorizableEditText
                android:id="@+id/js_captcha_cookies_editor_hsid_cookie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hsid_cookie_text"
                android:importantForAutofill="no"
                android:maxLines="4" />

        </com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout>

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.github.k1rakishou.chan.ui.theme.widget.ColorizableEditText
                android:id="@+id/js_captcha_cookies_editor_ssid_cookie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ssid_cookie_text"
                android:importantForAutofill="no"
                android:maxLines="4" />

        </com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout>

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.github.k1rakishou.chan.ui.theme.widget.ColorizableEditText
                android:id="@+id/js_captcha_cookies_editor_sid_cookie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sid_cookie_text"
                android:importantForAutofill="no"
                android:maxLines="4" />

        </com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout>

        <com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.github.k1rakishou.chan.ui.theme.widget.ColorizableEditText
                android:id="@+id/js_captcha_cookies_editor_nid_cookie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nid_cookie_text"
                android:importantForAutofill="no"
                android:maxLines="4" />

        </com.github.k1rakishou.chan.ui.theme.widget.ColorizableTextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp">

            <com.github.k1rakishou.chan.ui.theme.widget.ColorizableBarButton
                android:id="@+id/js_captcha_cookies_editor_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/reset" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <com.github.k1rakishou.chan.ui.theme.widget.ColorizableBarButton
                android:id="@+id/js_captcha_cookies_editor_save_and_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/js_captcha_cookies_editor_save_and_apply_text" />

        </LinearLayout>

    </LinearLayout>

</com.github.k1rakishou.chan.ui.theme.widget.ColorizableScrollView>