<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/search_post_error_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/unhandled_error"
            android:textSize="24sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/search_post_error_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="10"
            android:textSize="16sp"
            tools:text="@string/lorem_ipsum" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_post_error_retry_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/retry" />

    </LinearLayout>

</merge>